--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo&display=swap");
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: "Exo", sans-serif;
 }
