feat(chat): added chat

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@ body {
   padding: 0px;
   font-family: "Exo", sans-serif;
 }
+
+:root {
+  --shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
